--- a/config/combo.dtsi
+++ b/config/combo.dtsi
@@ -4,20 +4,20 @@
 
     combo_esc {
       timeout-ms = <50>;
-      key-positions = <j k>;
+      key-positions = <31 32>; // j k
       bindings = <&kp ESC>;
     };
 
     combo_def {
       timeout-ms = <50>;
-      key-positions = <n , . />;
+      key-positions = <45 46 47 48>; // m , . /
       bindings = <&to DEF>;
     };
 
-    combo_gme {
+    combo_bkp {
       timeout-ms = <50>;
-      key-positions = <z x c v>;
-      bindings = <&to GME>;
+      key-positions = <37 38 39 40>; // z x c v
+      bindings = <&to BKP>;
     };
   };
 };
