--- a/config/behav.dtsi
+++ b/config/behav.dtsi
@@ -1,27 +1,42 @@
+
+&lt { // layer-tap config
+  flavor = "balanced";
+  tapping-term-ms = <200>;
+  quick-tap-ms = <175>;
+};
+
 / {
   behaviors {
-    rpi: require_prior_idle {
+    hml: homerow_left {
       compatible = "zmk,behavior-hold-tap";
       #binding-cells = <2>;
-      flavor = "tap-preferred";
-      tapping-term-ms = <200>;
-      quick-tap-ms = <0>;
-      require-prior-idle-ms = <125>;
+      flavor = "balanced";
+      tapping-term-ms = <280>;
+      quick-tap-ms = <175>;
+      require-prior-idle-ms = <150>;
       bindings = <&kp>, <&kp>;
+      hold-trigger-key-positions = <25 26 27 28>;
+      hold-trigger-on-release;
     };
 
-    sdel: backspace_delete {
+    hmr: homerow_right {
+      compatible = "zmk,behavior-hold-tap";
+      #binding-cells = <2>;
+      flavor = "balanced";
+      tapping-term-ms = <280>;
+      quick-tap-ms = <175>;
+      require-prior-idle-ms = <150>;
+      bindings = <&kp>, <&kp>;
+      hold-trigger-key-positions = <31 32 33 34>;
+      hold-trigger-on-release;
+    };
+
+    bspd: backspace_delete {
       compatible = "zmk,behavior-mod-morph";
       #binding-cells = <0>;
       bindings = <&kp BSPC>, <&kp DEL>;
       mods = <(MOD_LSFT|MOD_RSFT)>;
     };
-
-    undmin: underscore_minus {
-      compatible = "zmk,behavior-mod-morph";
-      #binding-cells = <0>;
-      bindings = <&kp UNDER>, <&kp MINUS>;
-      mods = <(MOD_LSFT|MOD_RSFT)>;
-    };
   };
 };
+
