--- a/config/behav.dtsi
+++ b/config/behav.dtsi
@@ -1,55 +1,74 @@
-#define TAP_MS 280
-#define QT_MS 175
-#define RPI_MS 150
-
 &lt { // layer-tap config
   flavor = "balanced";
-  tapping-term-ms = <TAP_MS>;
-  quick-tap-ms = <QT_MS>;
-  require-prior-idle-ms = <RPI_MS>;
+  tapping-term-ms = <280>;
+  quick-tap-ms = <175>;
+  require-prior-idle-ms = <150>;
 };
 
 / {
   behaviors {
-    hml: homerow_left {
-      compatible = "zmk,behavior-hold-tap";
-      #binding-cells = <2>;
-      flavor = "balanced";
-      tapping-term-ms = <TAP_MS>;
-      quick-tap-ms = <QT_MS>;
-      require-prior-idle-ms = <RPI_MS>;
-      bindings = <&kp>, <&kp>;
-      hold-trigger-key-positions = <25 26 27 28>;
-      hold-trigger-on-release;
-    };
-
-    hmr: homerow_right {
-      compatible = "zmk,behavior-hold-tap";
-      #binding-cells = <2>;
-      flavor = "balanced";
-      tapping-term-ms = <TAP_MS>;
-      quick-tap-ms = <QT_MS>;
-      require-prior-idle-ms = <RPI_MS>;
-      bindings = <&kp>, <&kp>;
-      hold-trigger-key-positions = <31 32 33 34>;
-      hold-trigger-on-release;
-    };
-
-    bspc_del: backspace_delete {
+    // tap: backspace | shift+tap: delete | hold: SYS layer 
+    bs_del_sys: backspace_delete {
       compatible = "zmk,behavior-mod-morph";
       #binding-cells = <0>;
-      bindings = <&kp BSPC>, <&kp DEL>;
+      bindings = <&lt SYS BSPC>, <&kp DEL>;
       mods = <(MOD_LSFT|MOD_RSFT)>;
     };
 
-    lt_bspc: layer_tap_bspc_del {
-      compatible = "zmk,behavior-hold-tap";
-      #binding-cells = <2>;
-      flavor = "balanced";
-      bindings = <&mo>, <&bspc_del>;
-      tapping-term-ms = <TAP_MS>;
-      quick-tap-ms = <QT_MS>;
-      require-prior-idle-ms = <RPI_MS>;
+    and_or: and_or {
+      compatible = "zmk,behavior-mod-morph";
+      #binding-cells = <0>;
+      bindings = <&kp AMPS>, <&kp PIPE>;
+      mods = <(MOD_LSFT|MOD_RSFT)>;
+    };
+
+    eql_usc: equal_underscore {
+      compatible = "zmk,behavior-mod-morph";
+      #binding-cells = <0>;
+      bindings = <&kp EQUAL>, <&kp UNDER>;
+      mods = <(MOD_LSFT|MOD_RSFT)>;
+    };
+
+    fb_slh: forward_backword_slash {
+      compatible = "zmk,behavior-mod-morph";
+      #binding-cells = <0>;
+      bindings = <&kp FSLH>, <&kp BSLH>;
+      mods = <(MOD_LSFT|MOD_RSFT)>;
+    };
+
+    qmrk_excl: question_exclamation {
+      compatible = "zmk,behavior-mod-morph";
+      #binding-cells = <0>;
+      bindings = <&kp QMARK>, <&kp EXCL>;
+      mods = <(MOD_LSFT|MOD_RSFT)>;
+    };
+
+    lr_par: left_right_parenthesis {
+      compatible = "zmk,behavior-mod-morph";
+      #binding-cells = <0>;
+      bindings = <&kp LPAR>, <&kp RPAR>;
+      mods = <(MOD_LSFT|MOD_RSFT)>;
+    };
+
+    lr_brc: left_right_brace {
+      compatible = "zmk,behavior-mod-morph";
+      #binding-cells = <0>;
+      bindings = <&kp LBRC>, <&kp RBRC>;
+      mods = <(MOD_LSFT|MOD_RSFT)>;
+    };
+
+    lr_brk: left_right_bracket {
+      compatible = "zmk,behavior-mod-morph";
+      #binding-cells = <0>;
+      bindings = <&kp LBKT>, <&kp RBKT>;
+      mods = <(MOD_LSFT|MOD_RSFT)>;
+    };
+
+    alt_cw: alt_capsword {
+      compatible = "zmk,behavior-tap-dance";
+      #binding-cells = <0>;
+      tapping-term-ms = <200>;
+      bindings = <&kp LALT>, <&caps_word>;
     };
   };
 };
