flip alt/gui; add new combos

--- a/config/combo.dtsi
+++ b/config/combo.dtsi
@@ -1,11 +1,64 @@
+/*                                      58 KEY MATRIX / LAYOUT MAPPING
+
+  ╭────────────────────────────┬────────────────────────────╮ 
+  │  0   1   2   3   4   5     │      6   7   8   9  10  11 │
+  │ 12  13  14  15  16  17     │     18  19  20  21  22  23 │
+  │ 24  25  26  27  28  29     │     30  31  32  33  34  35 │
+  │ 36  37  38  39  40  41  42 │ 43  44  45  46  47  48  49 │
+  ╰───────────╮ 50  51  52  53 │ 54  55  56  57 ╭───────────╯
+              ╰────────────────┴────────────────╯            
+*/
+
 / {
   combos {
     compatible = "zmk,combos";
 
-    combo_esc {
+    combo_lbrc {
       timeout-ms = <50>;
-      key-positions = <14 15 16>; // W E R
-      bindings = <&kp ESC>;
+      key-positions = <15 16>; // ER
+      bindings = <&kp LBRC>;
+    };
+
+    combo_lpar {
+      timeout-ms = <50>;
+      key-positions = <27 28>; // DF
+      bindings = <&kp LPAR>;
+    };
+
+    combo_lbkt {
+      timeout-ms = <50>;
+      key-positions = <39 40>; // CV
+      bindings = <&kp LBKT>;
+    };
+
+    combo_rbrc {
+      timeout-ms = <50>;
+      key-positions = <19 20>; // UI
+      bindings = <&kp RBRC>;
+    };
+
+    combo_rpar {
+      timeout-ms = <50>;
+      key-positions = <31 32>; // JK
+      bindings = <&kp RPAR>;
+    };
+
+    combo_rbkt {
+      timeout-ms = <50>;
+      key-positions = <45 46>; // M,
+      bindings = <&kp RBKT>;
+    };
+
+    combo_usc {
+      timeout-ms = <50>;
+      key-positions = <28 31>; // FJ
+      bindings = <&kp UNDER>;
+    };
+
+    combo_eql {
+      timeout-ms = <50>;
+      key-positions = <25 34>; // A;
+      bindings = <&kp EQUAL>;
     };
   };
 };
