--- a/config/behav.dtsi
+++ b/config/behav.dtsi
@@ -7,6 +7,16 @@
 
 / {
   behaviors {
+    rpi: require_prior_idle {
+        compatible = "zmk,behavior-hold-tap";
+        #binding-cells = <2>;
+        flavor = "tap-preferred";
+        tapping-term-ms = <200>;
+        quick-tap-ms = <200>;
+        require-prior-idle-ms = <125>;
+        bindings = <&kp>, <&kp>;
+    };
+
     // tap: backspace | shift+tap: delete | hold: SYS layer 
     bs_del_sys: backspace_delete {
       compatible = "zmk,behavior-mod-morph";
