--- a/config/combo.dtsi
+++ b/config/combo.dtsi
@@ -1,4 +1,4 @@
-/*                                      58 KEY MATRIX / LAYOUT MAPPING
+/*              58 KEY MATRIX / LAYOUT MAPPING
 
   ╭────────────────────────────┬────────────────────────────╮ 
   │  0   1   2   3   4   5     │      6   7   8   9  10  11 │
@@ -10,79 +10,91 @@
 */
 
 / {
-  combos {
-    compatible = "zmk,combos";
+    combos {
+        compatible = "zmk,combos";
 
-    combo_tab {
-      timeout-ms = <75>;
-      key-positions = <53 54>; // SPC BSPC
-      bindings = <&kp TAB>;
-    };
+        combo_sys {
+            timeout-ms = <75>;
+            key-positions = <51 52>;
+            bindings = <&mo SYS>;
+        };
 
-    combo_lbrc {
-      timeout-ms = <50>;
-      key-positions = <14 15 16>; // WER
-      bindings = <&kp LPAR>;
-    };
+        combo_tab {
+            timeout-ms = <75>;
+            key-positions = <53 54>; // SPC BSPC
+            bindings = <&kp TAB>;
+        };
 
-    combo_lpar {
-      timeout-ms = <50>;
-      key-positions = <26 27 28>; // SDF
-      bindings = <&kp LBRC>;
-    };
+        combo_lbrc {
+            timeout-ms = <50>;
+            key-positions = <14 15 16>; // WER
+            bindings = <&kp LPAR>;
+        };
 
-    combo_lbkt {
-      timeout-ms = <50>;
-      key-positions = <38 39 40>; // XCV
-      bindings = <&kp LBKT>;
-    };
+        combo_lpar {
+            timeout-ms = <50>;
+            key-positions = <26 27 28>; // SDF
+            bindings = <&kp LBRC>;
+        };
 
-    combo_rbrc {
-      timeout-ms = <50>;
-      key-positions = <19 20 21>; // UIO
-      bindings = <&kp RPAR>;
-    };
+        combo_lbkt {
+            timeout-ms = <50>;
+            key-positions = <38 39 40>; // XCV
+            bindings = <&kp LBKT>;
+        };
 
-    combo_rpar {
-      timeout-ms = <50>;
-      key-positions = <31 32 33>; // JKL
-      bindings = <&kp RBRC>;
-    };
+        combo_rbrc {
+            timeout-ms = <50>;
+            key-positions = <19 20 21>; // UIO
+            bindings = <&kp RPAR>;
+        };
 
-    combo_rbkt {
-      timeout-ms = <50>;
-      key-positions = <45 46 47>; // M,.
-      bindings = <&kp RBKT>;
-    };
+        combo_rpar {
+            timeout-ms = <50>;
+            key-positions = <31 32 33>; // JKL
+            bindings = <&kp RBRC>;
+        };
 
-    combo_usc {
-      timeout-ms = <50>;
-      key-positions = <28 31>; // FJ
-      bindings = <&kp UNDER>;
-    };
+        combo_rbkt {
+            timeout-ms = <50>;
+            key-positions = <45 46 47>; // M,.
+            bindings = <&kp RBKT>;
+        };
 
-    combo_and {
-      timeout-ms = <50>;
-      key-positions = <27 32>; // DK
-      bindings = <&kp AMPS>;
-    };
+        combo_usc {
+            timeout-ms = <50>;
+            key-positions = <28 31>; // FJ
+            bindings = <&kp UNDER>;
+        };
 
-    combo_or {
-      timeout-ms = <50>;
-      key-positions = <26 33>; // SL
-      bindings = <&kp PIPE>;
-    };
+        combo_and {
+            timeout-ms = <50>;
+            key-positions = <27 32>; // DK
+            bindings = <&kp AMPS>;
+        };
 
-    combo_min {
-      timeout-ms = <75>;
-      key-positions = <25 34>; // A;
-      bindings = <&kp MINUS>;
-    };
+        combo_or {
+            timeout-ms = <50>;
+            key-positions = <26 33>; // SL
+            bindings = <&kp PIPE>;
+        };
 
-    combo_eql {
-      timeout-ms = <50>;
-      key-positions = <20 21>; // IO
-      bindings = <&kp EQUAL>;
+        combo_min {
+            timeout-ms = <75>;
+            key-positions = <25 34>; // A;
+            bindings = <&kp MINUS>;
+        };
+
+        combo_eql {
+            timeout-ms = <50>;
+            key-positions = <20 21>; // IO
+            bindings = <&kp EQUAL>;
+        };
+
+        combo_dqt {
+            timeout-ms = <50>;
+            key-positions = <32 33>; // KL
+            bindings = <&kp DQT>;
+        };
     };
-  };
 };
