--- a/config/splitkb_aurora_lily58.conf
+++ b/config/splitkb_aurora_lily58.conf
@@ -8,6 +8,9 @@
 # Uncomment the following lines to enable RGB underglow
 # CONFIG_ZMK_RGB_UNDERGLOW=y
 
+
+# CONFIG_BT_MAX_CONN=4
+# CONFIG_BT_MAX_PAIRED=4
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
-CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
+# CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
 CONFIG_BT_GATT_ENFORCE_SUBSCRIPTION=n
